Added home links to about, index and signup pages

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                     <h1 class="header-title">PORTFOLIO HOME</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
-                    <a href="index.html">ABOUT ME</a>
-                    <a href="#link">PORTFOLIO</a>
-                    <a href="#link">BLOG</a>
-                    <a href="#link">BIO</a>
-                    <a href="#link">CONTACT ME</a>
+                    <a href="index.html">HOME</a>
+                    <a href="about-me.html">ABOUT ME</a>
+                    <a href="portfolio.html">PORTFOLIO</a>
+                    <a href="blog.html">BLOG</a>
+                    <a href="bio.html">BIO</a>
+                    <a href="contact-me.html">CONTACT ME</a>
                 </div>
                 <div id="top-nav-button" class="col-md-2">
                     <button type="button" class="btn btn-dark"><a href="sign-up.html">SIGN UP</a></button>
