Finshed responsive CSS for signup and index page

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                         </form>
                     </div>
                     <div id="sect-03-cont-img1" class="col-md-4">
-                        <img src="img/squares.png" alt="">
+                        <img src="img/squares.png" alt="" class="img-fluid">
                     </div>
-                    <div id="sect-03-cont-img2" class="col-md-4 d-flex justify-content-md-end">
-                        <img src="/img/me2.jpg" alt="">
+                    <div id="sect-03-cont-img2" class="col-md-4">
+                        <img src="img/me.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
