--- a/sign-up.html
+++ b/sign-up.html
@@ -201,7 +201,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-12">
+                            <div id="sect-03-cont-submit-button" class="col-12">
                               <button class="btn btn-dark" type="submit">Submit form</button>
                             </div>
                           </form>
