Added contact me page

--- a/sign-up.html
+++ b/sign-up.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Veries's Portfolio - Sign-Up</title>
+    <title>Sign-Up</title>
 </head>
 <body>
     <!-- Header -->
@@ -18,7 +18,7 @@
         <div id="sect-01-cont" class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 class="header-title">PORTFOLIO HOME</h1>
+                    <h1 class="header-title">SIGN-UP</h1>
                 </div>
                 <div id="sect-01-top-nav" class="col-md-6 d-flex justify-content-md-between justify-content-md-end">
                     <a href="index.html">HOME</a>
