Added username and about me section with html

--- a/about-me.html
+++ b/about-me.html
@@ -44,7 +44,7 @@
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide1.png" class="d-block w-100" alt="...">
+                                <img src="img/login-reg-py-project.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
                                 <img src="img/my-work-slide2.png" class="d-block w-100" alt="...">
@@ -83,35 +83,27 @@
             <div id="sect-03-cont" class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h2 class="login">LOGIN</h2>
-                        <!-- form -->
-                        <form action="">
-                            <!-- Username -->
-                            <div class="input-group mb-3">
-                                <span class="input-group-text" id="basic-addon1">@</span>
-                                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
+                        <h2 class="login">USER NAME</h2>
+                        <div id="sect-03-cont-login-button" class="login-button">
+                            <button type="button" class="btn btn-dark">Logout</button>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="sect-03-about-me">ABOUT ME</h3>
+                        <!-- Paragraph 1 About Me-->
+                        <div class="col-md-12">
+                            My life began in the opposite way of software development. I always loved art. Traditional Art studies and video games consumed most of my life. Kindergarten through college I would draw, paint, sculpt, study graphic design and more.   
+                            The first experience I had with a personal computer was my 11th grade year in high school. I don’t remember the brand of computers that we used but it was my first experience with DOS. It seemed so high tech back then. I remember being so nervous to touch it. We were introduced to programming. The programming language we learned to use was called Basic.
+                        </div>
+                    </div>
 
-                            <!-- Password -->
-
-                            <label for="inputPassword" class="col-sm-4 col-form-label"><span id="password-text">Password</span></label>
-                            <div class="mb-3 row">
-                                <div class="col-sm-12">
-                                  <input type="password" class="form-control" id="inputPassword">
-                                </div>
-                              </div>
-                            
-                            <div id="sect-03-cont-login-button" class="login-button">
-                                <button type="button" class="btn btn-dark">Login</button>
-                            </div>
-                        </form>
+                    <!-- Paragraph 2 About Me-->
+                    <div class="col-md-4">
+                        <div class="col-md-12">
+                            It was an amazing experience for me. Basic was hard for me to absorb but I wanted nothing more than to become good at it. I never lost my curiosity for it over all these years. I didn’t get to learn more about programming until a few years ago. Looking into going back to school, ad’s popped up in my social media feed about Udemy. I started buying programming courses on sale every time I got a chance. I really want to learn to be a Full Stack Web Developer, so I have to get this down!
+                        </div>
                     </div>
-                    <div id="sect-03-cont-img1" class="col-md-4">
-                        <img src="img/squares.png" alt="">
-                    </div>
-                    <div id="sect-03-cont-img2" class="col-md-4 d-flex justify-content-md-end">
-                        <img src="/img/me2.jpg" alt="">
-                    </div>
+                    
                 </div>
             </div>
         </section>
