Adjusted about me and bio sections with HTML & CSS

--- a/about-me.html
+++ b/about-me.html
@@ -89,18 +89,35 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <h3 class="sect-03-about-me">ABOUT ME</h3>
+                        <div>
+                            <h3 class="sect-03-about-me">ABOUT ME</h3>
+                            <div id="article-line1">
+                                <hr>
+                            </div>
+                        </div>
                         <!-- Paragraph 1 About Me-->
-                        <div class="col-md-12">
-                            My life began in the opposite way of software development. I always loved art. Traditional Art studies and video games consumed most of my life. Kindergarten through college I would draw, paint, sculpt, study graphic design and more.   
-                            The first experience I had with a personal computer was my 11th grade year in high school. I don’t remember the brand of computers that we used but it was my first experience with DOS. It seemed so high tech back then. I remember being so nervous to touch it. We were introduced to programming. The programming language we learned to use was called Basic.
+                        <div id="bio-paragraph1" class="col-md-12">
+                            <p>
+                                My life began in the opposite way of software development. I always loved art. Traditional Art studies and video games consumed most of my life. Kindergarten through college I would draw, paint, sculpt, study graphic design and more.
+                            </p>
+                            <p> 
+                                The first experience I had with a personal computer was my 11th grade year in high school. I don’t remember the brand of computers that we used but it was my first experience with DOS. It seemed so high tech back then. I remember being so nervous to touch it. We were introduced to programming. The programming language we learned to use was called Basic.
+                            </p>
                         </div>
                     </div>
 
                     <!-- Paragraph 2 About Me-->
                     <div class="col-md-4">
-                        <div class="col-md-12">
-                            It was an amazing experience for me. Basic was hard for me to absorb but I wanted nothing more than to become good at it. I never lost my curiosity for it over all these years. I didn’t get to learn more about programming until a few years ago. Looking into going back to school, ad’s popped up in my social media feed about Udemy. I started buying programming courses on sale every time I got a chance. I really want to learn to be a Full Stack Web Developer, so I have to get this down!
+                        <div id="article-line2">
+                            <hr>
+                        </div>
+                        <div id="bio-paragraph2" class="col-md-12">
+                            <p>
+                                It was an amazing experience for me. Basic was hard for me to absorb but I wanted nothing more than to become good at it. I never lost my curiosity for it over all these years. I didn’t get to learn more about programming until a few years ago. 
+                            <p/>
+                            <p>
+                                Looking into going back to school, ad’s popped up in my social media feed about Udemy. I started buying programming courses on sale every time I got a chance. I really want to learn to be a Full Stack Web Developer, so I have to get this down!
+                            </p>
                         </div>
                     </div>
                     
