--- a/about-me.html
+++ b/about-me.html
@@ -44,13 +44,13 @@
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/login-reg-py-project.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide4.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide2.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide5.png" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide3.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide6.png" class="d-block w-100" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -85,7 +85,7 @@
                     <div class="col-md-4">
                         <h2 class="login">USER NAME</h2>
                         <div id="sect-03-cont-login-button" class="login-button">
-                            <button type="button" class="btn btn-dark">Logout</button>
+                            <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
                         </div>
                     </div>
                     <div class="col-md-4">
