Fixed broken link on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@
               </div>
               <div class="col-md-4 section-02a-cont-top-set2">
                   <div class="card" style="width: 18rem;">
-                      <img src="/img/vendor-sm.png" class="card-img-top" alt="...">
+                      <img src="img/vendor-sm.png" class="card-img-top" alt="...">
                       <div class="card-body git-card-combo">
                         <h5 class="card-title">Venedor</h5>
                         <p class="card-text">I had lots of fun working on the Venedor concept project. Click below to see it!</p>
