--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header class="top-header">
-        <div id="sect-01-cont" class="container">
+        <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
                     <h1 class="header-title">MY BLOG</h1>
@@ -38,7 +38,7 @@
     <!-- Main Body Content -->
     <main>
         <section class="section-2">
-            <div id="sect-02-cont" class="container">
+            <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
@@ -69,7 +69,7 @@
 
         <!-- Horizontal Line -->
         <section class="section-2b">
-            <div id="horizontal-line1" class="container">
+            <div id="horizontal-line1" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <hr>
@@ -80,7 +80,7 @@
 
         <!-- Login -->
         <section class="section-3">
-            <div id="sect-03-cont" class="container">
+            <div id="sect-03-cont" class="container-fluid">
                 <div class="row">
                     <div id="sect-03-user-box" class="col-md-4">
                         <h2 class="login">USER NAME</h2>
@@ -151,7 +151,7 @@
                     <!-- Blog Content-->
                     <div id="sect-03-blog-cont" class="col">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div id="notice-number" class="col-md-6">
                                 <p>Notices (1)</p>
                             </div>
                             <div class="col-md-6 d-flex justify-content-md-end">
@@ -172,7 +172,7 @@
                             <hr>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div id="all-number" class="col-md-6">
                                 <p>All (1)</p>
                             </div>
                             <div id="section-03-manage" class="col-md-6 d-flex justify-content-md-end">
@@ -185,12 +185,12 @@
                         <div id="article-line1">
                             <hr>
                         </div>
-                        <div class="blog-post">
+                        <div id="blog-cont" class="blog-post">
                             <div class="row">
                                 <div class="col-md-2">
                                     <div><h1 id="blogger-header">M</h1></div>
                                 </div>
-                                <div class="col-md-4">
+                                <div id="blog-post-dates" class="col-md-4">
                                     <div><p>My first blog Post</p></div>
                                     <div>Published * Sep 18</div>
                                 </div>
@@ -222,7 +222,7 @@
 
         <!-- Horizontal Line -->
         <section class="section-3b">
-            <div id="horizontal-line2" class="container">
+            <div id="horizontal-line2" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <hr>
@@ -234,7 +234,7 @@
     </main>
 
     <footer class="section-4">
-        <div id="sect-04-cont" class="container">
+        <div id="sect-04-cont" class="container-fluid">
             <div class="row">
                 <div id="sect-04-social-icons" class="col-md-5 d-flex  justify-content-md-end">
                     <a href="https://github.com/veriesseals" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
