--- a/contact-me.html
+++ b/contact-me.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header class="top-header">
-        <div id="sect-01-cont" class="container">
+        <div id="sect-01-cont" class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
                     <h1 class="header-title">CONTACT ME</h1>
@@ -38,7 +38,7 @@
     <!-- Main Body Content -->
     <main>
         <section class="section-2">
-            <div id="sect-02-cont" class="container">
+            <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
@@ -69,7 +69,7 @@
 
         <!-- Horizontal Line -->
         <section class="section-2b">
-            <div id="horizontal-line1" class="container">
+            <div id="horizontal-line1" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <hr>
@@ -80,7 +80,7 @@
 
         <!-- Login -->
         <section class="section-3">
-            <div id="sect-03-cont" class="container">
+            <div id="sect-03-cont" class="container-fluid">
                 <div class="row">
                     <form>
                         <div class="col">
@@ -105,7 +105,7 @@
 
         <!-- Horizontal Line -->
         <section class="section-3b">
-            <div id="horizontal-line2" class="container">
+            <div id="horizontal-line2" class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <hr>
@@ -117,7 +117,7 @@
     </main>
 
     <footer class="section-4">
-        <div id="sect-04-cont" class="container">
+        <div id="sect-04-cont" class="container-fluid">
             <div class="row">
                 <div id="sect-04-social-icons" class="col-md-5 d-flex  justify-content-md-end">
                     <a href="https://github.com/veriesseals" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
