Optimized img files and changed about sect html

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,13 @@
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide7.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide7.jpg" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide8.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide8.jpg" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide9.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide9.jpg" class="d-block w-100" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -90,13 +90,23 @@
                             <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
                         </div>
                     </div>
-                    <div class="col-md-4">
+
+                    <!-- Portfolio Article -->
+                    <div class="section-03-cont-block">
+                      <div class="sect-03-cont-article">
                         <div>
-                            <h3 class="sect-03-about-me">ABOUT MY PORTFOLIO</h3>
-                            <div id="article-line1">
-                                <hr>
-                            </div>
+                          <h3 class="sect-03-about-me">ABOUT MY PORTFOLIO</h3>
                         </div>
+                      </div>
+                      <div>
+                        <div id="article-line1">
+                            <hr>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="about-my-port-sect"></div>
+                    <div class="col-md-4">
                         <!-- Paragraph 1 About Me-->
                         <div id="bio-paragraph1" class="col">
                             <p>
@@ -107,9 +117,6 @@
 
                     <!-- Paragraph 2 About Me-->
                     <div class="col-md-4">
-                        <div id="article-line2">
-                            <hr>
-                        </div>
                         <div id="bio-paragraph2" class="col">
                             <p>
                               I still feel I have a lot to learn, but I am proud of the body of work that I have produced. I can see the fruits of my labor. I hope that as you browse my portfolio you can also see my effort and appreciate my work at the same time.
