--- a/sign-up.html
+++ b/sign-up.html
@@ -44,13 +44,13 @@
                         <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide12.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide12.jpg" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide15.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide15.jpg" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item">
-                                <img src="img/my-work-slide2.png" class="d-block w-100" alt="...">
+                                <img src="img/my-work-slide2.jpg" class="d-block w-100" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
