Changed HTML and CSS for about pages

--- a/about-me.html
+++ b/about-me.html
@@ -78,39 +78,49 @@
             </div>
         </section>
 
-        <!-- Login -->
+        <!-- Login Section New -->
         <section class="section-3">
             <div id="sect-03-cont" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4">
-                        <h2 class="login">USER NAME</h2>
-                        <div id="sect-03-cont-login-button" class="login-button">
+                    <div class="d-flex">
+                        <div class="col-md-2">
+                            <h2 class="login">USER NAME</h2>
+                        </div>
+                        <div id="sect-03-cont-login-button" class="login-button col-md-10">
                             <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h3 class="sect-03-about-me">ABOUT ME</h3>
-                            <div id="article-line1">
-                                <hr>
-                            </div>
-                        </div>
-                        <!-- Paragraph 1 About Me-->
-                        <div id="bio-paragraph1" class="col">
-                            <p>
-                                My path to software development was not a typical one. I have always loved traditional art and video games. As a kid my world was consumed by these two things. From kindergarten through my college days, drawing, painting, and sculpting were favorite pastimes.   
-                            </p>
-                            <p> 
-                                The first experience I had with a personal computer was my 11th grade year in high school. I don’t remember the brand of computers we used, but it was my first experience with DOS. It seemed so high tech to me back then. I remember being so nervous to touch it for fear of breaking it. We were introduced to a programming language called Basic. This is when my love affair with programming and graphic design began.
-                            </p>
-                        </div>
-                    </div>
 
-                    <!-- Paragraph 2 About Me-->
-                    <div class="col-md-4">
-                        <div id="article-line2">
+                    <!-- Portfolio Article -->
+                    <div class="section-03-cont-block">
+                      <div class="sect-03-cont-article">
+                        <div>
+                          <h3 class="sect-03-about-me">ABOUT ME</h3>
+                        </div>
+                      </div>
+                      <div>
+                        <div id="article-line1">
                             <hr>
                         </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+
+                      <div class="about-my-port-sect d-flex">
+                        <div class="col-md-6">
+                            <!-- Paragraph 1 About Me-->
+                            <div id="bio-paragraph1" class="col">
+                                <p>
+                                    My path to software development was not a typical one. I have always loved traditional art and video games. As a kid my world was consumed by these two things. From kindergarten through my college days, drawing, painting, and sculpting were favorite pastimes.   
+                                </p>
+                                <p> 
+                                    The first experience I had with a personal computer was my 11th grade year in high school. I don’t remember the brand of computers we used, but it was my first experience with DOS. It seemed so high tech to me back then. I remember being so nervous to touch it for fear of breaking it. We were introduced to a programming language called Basic. This is when my love affair with programming and graphic design began.
+                                </p>
+                            </div>
+                        </div>
+    
+                        <!-- Paragraph 2 About Me-->
                         <div id="bio-paragraph2" class="col">
                             <p>
                                 It was an amazing experience for me. Basic was hard for me to absorb, but I wanted nothing more than to master it. I never lost my curiosity for it all these years. I didn’t get to learn more about programming until a few years ago. Deciding to go back to school was a big step in my life. 
@@ -119,11 +129,14 @@
                                 While doing research about returning to college, ads would appear from time to time in my social media feed about Udemy. I had already decided programming was what I wanted to study, so I started buying programming courses on sale every chance I got. I really want to learn to be a Full Stack Web Developer, so I now find myself on this path and in it for the long haul.
                             </p>
                         </div>
+                      </div>
                     </div>
                     
                 </div>
             </div>
         </section>
+
+        <!-- End Login Section New -->
 
         <!-- Horizontal Line -->
         <section class="section-3b">
