--- a/about-me.html
+++ b/about-me.html
@@ -40,28 +40,8 @@
         <section class="section-2">
             <div id="sect-02-cont" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div id="myCarouselInterval" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                              <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="img/my-work-slide4.jpg" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item" data-bs-interval="2000">
-                                <img src="img/my-work-slide5.jpg" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="img/my-work-slide6.jpg" class="d-block w-100" alt="...">
-                              </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                          </div>
+                    <div class="col">
+                        <img src="img/full-stack-development.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -71,7 +51,7 @@
         <section class="section-2b">
             <div id="horizontal-line1" class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col">
                         <hr>
                     </div>
                 </div>
